# claude-code-autoyes

./: .coverage.M1-AFurrier.50617.XPHEIrux  .coverage.M1-AFurrier.51767.XSyugVsx  .coverage.M1-AFurrier.52600.XIcKJlXx  .coverage.M1-AFurrier.53060.XeJQBMYx  .coverage.M1-AFurrier.53772.XFfNbxsx  .coverage.M1-AFurrier.54136.XEAhwgHx  .coverage.M1-AFurrier.54624.XAvmHzGx  .coverage.M1-AFurrier.55130.XTTOVYzx  .coverage.M1-AFurrier.55726.XiOQTMPx  .gitignore  .pre-commit-config.yaml  404.html  BAGELS_PORTING_PLAN.md  BAGELS_TUI_RESEARCH.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS_RESEARCH_REPORT.md  Makefile  PROJECT_CONVENTIONS.md  README.md  claude_code_autoyes.py  conventions_research_report.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: tests.yml
claude_code_autoyes/: __init__.py  __main__.py  cli.py  tui.py
claude_code_autoyes/commands/: __init__.py  daemon.py  debug.py  disable_all.py  enable_all.py  status.py  tui.py
claude_code_autoyes/core/: __init__.py  config.py  constants.py  daemon.py  daemon_service.py  detector.py  logging_config.py  models.py  performance.py
claude_code_autoyes/tui/: __init__.py  app.py  themes.py
claude_code_autoyes/tui/components/: __init__.py  button_controls.py  instance_table.py  jump_overlay.py  jumper.py  shortcuts_bar.py  status_bar.py
claude_code_autoyes/tui/pages/: __init__.py  main_page.py
development/: index.html
docs/: development.md  getting-started.md  index.md
docs/reference/: api.md
getting-started/: index.html
reference/api/: index.html
scripts/: simulate-claude-prompt.sh
search/: search_index.json
tests/: __init__.py  conftest.py  test_docs_setup.py
tests/e2e/: test_cli_equivalence.py  test_real_claude_detection.py  test_tui_feature_parity.py  test_tui_versioning.py
tests/integration/: test_child_process_discovery.py  test_external_dependencies.py  test_uv_tool_installation.py
tests/performance/: test_debug_commands.py  test_pyspy_integration.py  test_startup_performance.py
tests/smoke/: test_module_imports.py
tests/unit/: test_config_global_toggle.py  test_daemon_global_toggle.py  test_daemon_service.py  test_enhanced_detector_methods.py  test_models.py
